--- a/.github/workflows/GitVersion.yml
+++ b/.github/workflows/GitVersion.yml
@@ -17,19 +17,8 @@ jobs:
           ref: ${{ github.head_ref }}   # checkout the correct branch name
           fetch-depth: 0                # fetch the whole repo history
       - name: Versioning Code
-        uses: paulhatch/semantic-version@v3
+        uses: Klemensas/action-autotag@stable
         with:
-          # The branch to count commits on
-          branch: "main"
-          # The prefix to use to identify tags
+          GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
           tag_prefix: "v"
-          # A string which, if present in a git commit, indicates that a change represents a
-          # major (breaking) change
-          major_pattern: "(MAJOR)"
-          # Same as above except indicating a minor change
-          minor_pattern: "(MINOR)"
-          # A string to determine the format of the version output
-          format: "${major}.${minor}.${patch}-prerelease.${increment}"
-          # Optional path to check for changes. If any changes are detected in the path the
-          # 'changed' output will true. Enter multiple paths separated by spaces.
-          change_path: "lib"
+          version: "${{ steps.previous_step.outputs.version }}"
